2007-07-20  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: rsvg threw away nodes that it didn't understand, which caused
	things like <switch> not to work properly. Now, treat unknown nodes as
	groups (#401115)
	
2007-07-20  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rsvg-base.c: Fix for embedded SVG position issue (#444462)
	
2007-07-19  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-cairo-draw.c: Replace g_malloc with g_try_malloc. We'll need
	to go through the rest of the source and replace g_new with g_try_new,
	and fall-back gracefully.
	
2007-07-01  Dom Lachowicz <domlachowicz@gmail.com>

	* io-svg.c: Support compressed SVG from the GdkPixbufLoader (#452823)

2007-06-22  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* tests: Enable additional tests and add reference images.

2007-06-22  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* test-display.c: fix modeline.

2007-06-22  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Fix for Bug 448327

	* rsvg-base.c (rsvg_path_is_uri): new.
	(rsvg_get_base_uri_from_filename): really return a URI.
	(rsvg_handle_set_base_uri): accept a non URI as parameter, converting
	it to local URI.
	* rsvg-convert.c: fix rsvg_handle_set_base_uri call.
	* rsvg-image.c (rsvg_get_file_path): adpat the code to the fact
	base_uri is now really an URI.	
	(rsvg_acquire_file_resource): handle path==NULL.
	
2007-06-16  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-structure.c: Bug 444462 - x & y attributes shouldn't affect the
	outermost <svg> element
	
2007-06-15  Dom Lachowicz <domlachowicz@gmail.com>

	* test-display.c: Bug 444443 - allow to subrender with rsvg-view. From
	Christian Persch.
	
2007-05-02  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: Bug 435129 - crashes when using subrendering
	
2007-05-01  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: mem leak in rsvg_cairo_render_sub (#409030)
	
2007-05-01  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-base.c: #427031, again
	