@@ -1,5 +1,9 @@
 2007-07-20  Dom Lachowicz <domlachowicz@gmail.com>
 
+	* rsvg-styles.c: Re-order how CSS styles get applied (#418823)
+	
+2007-07-20  Dom Lachowicz <domlachowicz@gmail.com>
+
 	* rsvg-base.c: rsvg threw away nodes that it didn't understand, which caused
 	things like <switch> not to work properly. Now, treat unknown nodes as
 	groups (#401115)
